--- a/CSS/06 Aufgabe WH CSS 3/index.html
+++ b/CSS/06 Aufgabe WH CSS 3/index.html
@@ -19,6 +19,9 @@
             <div class="littlegreenbox"></div>
         </div>
     </div>
-    <div class="bluebottombox"></div>
+    <div class="bluebottombox">
+        <div class="blackinnerbox"></div>
+        <div class="blackouterbox"></div>
+    </div>
 </body>
 </html>
