--- a/CSS/08 Aufgabe WH CSS 5/index.html
+++ b/CSS/08 Aufgabe WH CSS 5/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="flexendesgrid">
+        <div class="gridbox item1"></div>
+        <div class="gridbox item2"></div>
+        <div class="gridbox item3"></div>
+        <div class="blackbox"></div>
+    </div>
+
+    <div class="friedegg">
+        <div class="yolk"></div>
+    </div>
 </body>
 </html>
