--- a/CSS/09 Aufgabe ORF/index.html
+++ b/CSS/09 Aufgabe ORF/index.html
@@ -21,18 +21,25 @@
             <li>News</li>
            </div>
             <div class="ueberblick"></div>ORF.at im Ueberblick</div>
+            <div class="logoleiste">
+                <div class="wrapperorf">
+                    <div class="vorarlberg">vorarlberg</div>
+                <div class="orf"><img src="img\orf_logo.svg" alt="ORF-Logo"></div>
+                </div>
+                <div class="wrappersonderaktionen">
+                    <div class="neunplaetzeneunschaetze"><img src="img\9_plaetze_9_schaetze.svg" alt="Neun Plätze Neun Schätze dingens"></div>
+                </div>
+            </div>
+            <div class="heading2">
+                <div class="listendings2">
+                 <li>Vorarlberg News</li>
+                 <li>Radio Vorarlberg</li>
+                 <li>Vorarlberg Heute</li>
+                 <li>ORF Vorarlberg</li>
+                 <li>Da rest vo Österreich</li>
+                 <img src="img\bellend.svg" alt="An Image of an Bellend">
+                </div>
         </div>
-        <div class="logoleiste">
-            <img src="img\orf_logo.svg" alt="ORF-Logo">
-        </div>
-    </div>
-    <div class="unterdiv">
-        <div class="heading2">
-            <div class="vorarlberg"></div>
-            <div class="glocke"></div>
-        </div>
-        <div class="bild"></div>
-        <div class="content"></div>
     </div>
 </body>
 </html>
