Added Content div (with problems for another day)

--- a/CSS/09 Aufgabe ORF/index.html
+++ b/CSS/09 Aufgabe ORF/index.html
@@ -41,5 +41,10 @@
                 </div>
         </div>
     </div>
+    <div class="contentdiv">
+        <div class="contentimage"><img src="img\bmw-e30-m3-gebaut-1986-175572.jpg" alt="bmw-e30"></div>
+    </div>
 </body>
 </html>
+
+(Ausgeklammert: https://www.der-postillon.com/2016/10/trabbi-parade.html)
