Added Content to Site

--- a/CSS/09 Aufgabe ORF/index.html
+++ b/CSS/09 Aufgabe ORF/index.html
@@ -42,9 +42,16 @@
         </div>
     </div>
     <div class="contentdiv">
-        <div class="contentimage"><img src="img\bmw-e30-m3-gebaut-1986-175572.jpg" alt="bmw-e30"></div>
+        <div class="contentimage"><img src="img\bmw-e30-m3-gebaut-1986-175572.jpg" alt="bmw-e30" width="100%"></div>
+            <div class="lead">
+                <div class="keyword">Aufgabenwahnsinn</div>
+                <div class="title">Karin Kneflhuber gibt eine Aufgabe</div>
+                <div class="aufschneider">Trotz monatelangem betteln nach weniger Arbeit, bleibt Kneflhuber K. hart; Es bestehe schließlich keine Gefahr für Leib und Seele, daher seien die aktuellen Arbeitsaufgaben gerechtfertigt.</div>
+                <div class="zeitstempel">seit 19:32 Uhr online</div>
+                <div class="schtoryschtory">
+                    Die Schüler einer Klasse aus der HTL-Dornbirn beschwerten sich schon des öfteren bei ihrem Abteilungsvorstand Prof. Ing. Lanz M. Nach eigenen Angaben bekomme er schon Kopfschmerzen beim Lesen des Betreffs, "So kann es einfach nicht weiter gehen!"
+                </div>
+            </div>
     </div>
 </body>
 </html>
-
-(Ausgeklammert: https://www.der-postillon.com/2016/10/trabbi-parade.html)
