Finished Asssignment ORF

--- a/CSS/09 Aufgabe ORF/index.html
+++ b/CSS/09 Aufgabe ORF/index.html
@@ -45,7 +45,7 @@
         <div class="contentimage"><img src="img\bmw-e30-m3-gebaut-1986-175572.jpg" alt="bmw-e30" width="100%"></div>
             <div class="lead">
                 <div class="keyword">Aufgabenwahnsinn</div>
-                <div class="title">Karin Kneflhuber gibt eine Aufgabe</div>
+                <div class="title">Karina Kneflhuber gibt eine Aufgabe</div>
                 <div class="aufschneider">Trotz monatelangem betteln nach weniger Arbeit, bleibt Kneflhuber K. hart; Es bestehe schließlich keine Gefahr für Leib und Seele, daher seien die aktuellen Arbeitsaufgaben gerechtfertigt.</div>
                 <div class="zeitstempel">seit 19:32 Uhr online</div>
                 <div class="schtoryschtory">
@@ -55,3 +55,5 @@
     </div>
 </body>
 </html>
+
+#MobileFirst
