Added Checkboxes with checkbox memory and finished

--- a/JS/11 Aufgabe TodoList/index.html
+++ b/JS/11 Aufgabe TodoList/index.html
@@ -15,7 +15,8 @@
             <ul id="taskList"></ul>
         </div>
         <div class="control">
-            <input type="text" id="newTaskTxt">
+            <input type="text" id="newTaskTxt" placeholder="Your Task">
+            <input type="text" id="newResponsibleTxt" placeholder="Your Name">
             <button id="taskAdder">Add Task</button>
         </div>
     </div>
