--- a/JS/12 Verschiedene Aufgaben/01 Waerungsrechner/index.html
+++ b/JS/12 Verschiedene Aufgaben/01 Waerungsrechner/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js" defer></script>
-    <title>Waehrungsrechner</title>
+    <title>Currency Calculator</title>
 </head>
 <body>
+    <h1>Currency Calculator</h1>
     <div class="input">
         <div class="input-field">
             <input type="text" id="originCurrencyValue" placeholder="Origin Amount">
-        </div>
-        <div class="currency-field">
             <input type="text" id="originCurrency" placeholder="Origin Currency">
         </div>
     </div>
     <div class="output">
         <input type="text" id="targetCurrency" placeholder="New Currency">
+        <input type="text" id="targetCurrencyAmount" readonly placeholder="Target Currency">
     </div>
     <div class="action">
         <button id="calculate">Calculate</button>
