--- a/04 Javascript - Ajax/04 Fußballsite/index.html
+++ b/04 Javascript - Ajax/04 Fußballsite/index.html
@@ -12,10 +12,10 @@
         <div class="redText">FIFA Weltmeisterschaftgruppenergebnisse 2022</div>
     </div>
     <div class="content">
-        <div class="gruppenbox1"></div>
-        <div class="gruppenbox2"></div>
-        <div class="gruppenbox3"></div>
-        <div class="gruppenbox4"></div>
+        <div class="gruppenbox box1">Text</div>
+        <div class="gruppenbox box2">Text</div>
+        <div class="gruppenbox box3">Text</div>
+        <div class="gruppenbox box4">Text</div>
     </div>
     <div class="greenhead"></div>
 </body>
