Finished Fußballsite with minor Bugs

--- a/04 Javascript - Ajax/04 Fußballsite/index.html
+++ b/04 Javascript - Ajax/04 Fußballsite/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FIFA WM 2022</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="redhead">
         <div class="redText">FIFA Weltmeisterschaftgruppenergebnisse 2022</div>
     </div>
-    <div class="content">
+    <div id="content" class="content">
         <div class="gruppenbox box1">Text</div>
         <div class="gruppenbox box2">Text</div>
         <div class="gruppenbox box3">Text</div>
